--- a/custom_components/anomaly_detector/manifest.json
+++ b/custom_components/anomaly_detector/manifest.json
@@ -1,12 +1,12 @@
 {
-  "domain": "integration_blueprint",
-  "name": "Integration blueprint",
+  "domain": "sensor",
+  "name": "Anomaly Detector",
   "codeowners": [
-    "@ludeeus"
+    "@laqoore"
   ],
   "config_flow": true,
-  "documentation": "https://github.com/ludeeus/integration_blueprint",
+  "documentation": "https://github.com/Laqoore/anomaly_detector",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/ludeeus/integration_blueprint/issues",
-  "version": "0.0.0"
+  "issue_tracker": "https://github.com/Laqoore/anomaly_detector/issues",
+  "version": "0.0.1"
 }
